# CustomAllocator

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_allocator.cpp
cmake/: CompilerWarnings.cmake
include/allocator/: allocator.h  memory_resource.h
src/: CMakeLists.txt  allocator_resource.cpp
tests/: CMakeLists.txt  test_allocator.cpp
